# Calcolo_fattori_correttivi_esperimento_Cavendish

./: README.md
output/: results_correzione_massa_lontana_fc2.txt  results_correzione_massa_vicina_fc1.txt
src/: CMakeLists.txt  correzione_massa_cilindrica_lontana_fc2.cpp  correzione_massa_cilindrica_vicina_fc1.cpp
